@@ -1,3 +1,3 @@
-EBUILD clementine-9999.ebuild 3648 RMD160 a6894d4e121d921772035eb3cd09d5bf83967fe5 SHA1 eac16a9d0d391d9f8620ec7edd769119af953751 SHA256 78653975535b534f913af66f34f0feb25823be301d1a0870fe4c0ad82eb2cc6c
-MISC ChangeLog 4709 RMD160 5d3964edaa987a7b52ddbd1462a7315bdc010502 SHA1 09e4021fc7e0ea3cefb4bcd768fc2c43247b1f3f SHA256 576a4cbed76eec8e07ed93d1a76dd5c6d6b260d44e6f39db63ea688096196863
-MISC metadata.xml 924 RMD160 e57b4eb542a62d47ab4747c0542db29a9c5b08bc SHA1 0cd0ae541f2ac4483165db93581decb1b42ff669 SHA256 6d7cf7d0e2837935ab904b56339c14f25023c7628020bcdbf5ee93b04b1d398f
+EBUILD clementine-9999.ebuild 3683 RMD160 3a4ea40d58e0041b4121221da75f6d84450d2ec4 SHA1 4d72e4499e5e9a09965c2d5c17ce8112802347f0 SHA256 350d84b96d4b899dae233dcc9406f7514446b944f7faaa7af3a8d45c754779d6
+MISC ChangeLog 4845 RMD160 0dc7337aab1ff94ddf7deea9e247a85a1f99c51a SHA1 bb35a120b974390bb6201a1790d0d27c8830e5b9 SHA256 ec94e6fceddbe6449aebeae056b07bb06822b0924adde036dcd403da967d43cf
+MISC metadata.xml 729 RMD160 a86d67b8204118147ab5234ab8f001d5e95711e0 SHA1 2247b5989cfc6cc2e15ab0797013afccde5250eb SHA256 6993d39054aea32e1c89d8f8b0d4d4c5cae17e9822b1fea268e288dd10956c28
